--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,33 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="WebApp_9" version="2.4"
-         xmlns="http://java.sun.com/xml/ns/j2ee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-    <!--上面声明默认的名称空间和XMLSchema实例名称空间-->
-    <!--上面xsi双参数用于文档格式校验。名称空间的名字（空格）模式文档的位置。-->
-
-    <!--如果使用工具编辑部署描述符，display-name元素包含的就是XML编辑器显示的名称-->
-    <!--这个与服务器配置基本没有什么关系-->
-    <display-name>QianXunServer</display-name>
-    <welcome-file-list>
-        <!--默认主页-->
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
-
-    <!--Struts2-->
-    <filter>
-        <filter-name>SSH</filter-name>
-        <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>SSH</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
-    <!--Spring-->
-    <listener>
-        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
-
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
+	id="WebApp_ID" version="3.0">
+	<display-name>qianxun</display-name>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+	<session-config>
+		<session-timeout>120</session-timeout>
+	</session-config>
+	<error-page>
+		<error-code>401</error-code>
+		<location>/null.html</location>
+	</error-page>
+	<error-page>
+		<error-code>403</error-code>
+		<location>/null.html</location>
+	</error-page>
+	<error-page>
+		<error-code>404</error-code>
+		<location>/null.html</location>
+	</error-page>
+	<error-page>
+		<error-code>500</error-code>
+		<location>/null.html</location>
+	</error-page>
+	<filter>
+		<filter-name>validateFilter</filter-name>
+		<filter-class>filter.ValidateFilter</filter-class>
+	</filter>
+	<filter>
+		<filter-name>hibernateFilter</filter-name>
+		<filter-class>org.springframework.orm.hibernate3.support.OpenSessionInViewFilter
+		</filter-class>
+		<init-param>
+			<param-name>singleSession</param-name>
+			<param-value>true</param-value>
+		</init-param>
+		<init-param>
+			<param-name>flushMode</param-name>
+			<param-value>COMMIT</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>validateFilter</filter-name>
+		<url-pattern>*.action</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>hibernateFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<filter>
+		<filter-name>struts2</filter-name>
+		<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter
+		</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>struts2</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener
+		</listener-class>
+	</listener>
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/classes/applicationContext.xml</param-value>
+	</context-param>
 </web-app>
