--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -66,6 +66,6 @@
 	</listener>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/classes/applicationContext.xml</param-value>
+		<param-value>classpath:applicationContext.xml</param-value>
 	</context-param>
 </web-app>
